--- a/src/componentes/ListaSuspensa/ListaSuspensa.css
+++ b/src/componentes/ListaSuspensa/ListaSuspensa.css
@@ -5,16 +5,11 @@
 }
 
 .lista-suspensa select {
-    background: #fff;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.6);
+    background-color: #FFF;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
     width: 100%;
     border: none;
     font-size: 24px;
     padding: 24px;
     box-sizing: border-box;
 }
-
-
-
-
-
