--- a/src/componentes/Banner/Banner.css
+++ b/src/componentes/Banner/Banner.css
@@ -1,8 +1,8 @@
 .banner {
-    background-color: #6278F7;
+    background-color: #000000;
     text-align: center;
 }
 
 .banner img {
-    max-width: 100%;
+    width: 85%;
 }
