--- a/src/componentes/Rodape/Rodape.css
+++ b/src/componentes/Rodape/Rodape.css
@@ -1,9 +1,9 @@
 .footer {
-    background: #6278F7;
+    background: #000000;
     color: #FFF;
     padding: 80px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -14,4 +14,8 @@
 
 .footer ul li:last-child {
     margin-right: 0;
+}
+
+.Logo img {
+    width: 87%;
 }
